<resources>
    <string name="app_name">Sekritou</string>
    <string name="menu_logout">Log out</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_username"> Email or username</string>
    <string name="hint_new_post">Write your secret&#8230;</string>
    <string name="hint_new_post_title">Title your secret&#8230;</string>
    <string name="show_username">Show my username </string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Secrets</string>
    <string name="heading_my_top_posts">Top Secrets</string>
    <string name="title_activity_main">Main Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="sekritoo_slogon1">Everybody has a secret.</string>
    <string name="sekritoo_slogon2">share us your secret and/or your story anonymously.</string>
    <string name="sekritoo_slogon3">We all have stories, we will never tell.</string>
    <string name="sekritoo_slogon4">The greatest secrets are always hidden in the most unlikely places. </string>

    <string name="sekritoo_slogon1_ar">الناس لكلّ عندها أسرار.</string>
    <string name="sekritoo_slogon2_ar">شاركنا سرّك و إلاّ حكايتك من غير ما يعرفك حدّ.</string>


    <!--sign in activity  text-->
    <string name="text_forgotPassword">Forgot Password?</string>
    <string name="button_sendResetMail">Send reset mail</string>
    <string name="field_resetEmail">Enter your email&#8230;</string>
    <string name="sign_msg">Do not forget your password. If you do, there is no way to recover it.</string>
    <string name="sign_msg1">Sing up with a valid email if you want to recover your password if lost. Otherwise use a fake one\n(Exp: nickname@sekritou.com).</string>
    <string name="sign_notif">Speak out the hidden anonymously!</string>
    <string name="sign_notif1">Pick up a username and jump in!\nYour identity remains unknown, no one will never know you.</string>
    <!---->

    <!--post detail activity-->
    <string name="button_post_comment">Post</string>
    <string name="field_comment_text">Write a comment&#8230;</string>
    <!---->

    <!-- user profile -->
    <string name="username">%1$s</string>
    <string name="useremail">Email\n%1$s</string>
    <string name="userCountry">Country: %1$s</string>
    <string name="userSignUpDate">Created at\n %1$s</string>
    <string name="userLastVisitDate">Last Visit\n%1$s</string>
    <string name="userSexe">Gender: %1$s</string>

    <string name="country_edit_hint">Add the country&#8230;</string>
    <string name="sexe_edit_hint">Add your sexe&#8230;</string>

    <string name="edit">Edit Profile</string>
    <string name="save">Save Changes</string>
    <string name="cancel">Cancel Changes</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!-- END Auth0 user profile -->


    <!-- New post activity-->
    <string name="notif_new_post">If your post does not contain a secret, it will most likely be removed.</string>
    <!---->
    <string name="lorem"> My first post text</string>


    <!--activity main menu items-->
    <string name="item_home">Home</string>
    <string name="item_account">Account</string>
    <string name="item_secrets">Secrets</string>
    <string name="item_logout">Logout</string>
    <!---->
</resources>
