<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.doufa.sekritoo.auth.SignInActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/sekritoo_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_notif"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/Widget.AppCompat.Button" />


        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            style="@style/Widget.AppCompat.Button.Colored" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_msg"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/button_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/text_forgotPassword"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textAlignment="center" />

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/field_resetEmail"
        android:id="@+id/field_resetEmail"
        android:visibility="gone"/>

    <Button
        android:layout_marginTop="10dp"
        android:text="@string/button_sendResetMail"
        android:id="@+id/button_sendResetMail"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:visibility="gone"/>

</LinearLayout>
</ScrollView>