<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.doufa.sekritoo.UserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_general_margin">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_action_account_circle_40"
                 android:layout_gravity="center_horizontal"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/activity_small_margin">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                        android:src="@drawable/ic_account_box"
                    android:paddingRight="@dimen/activity_small_margin"/>
                <TextView
                    android:id="@+id/userNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/userSexeLayout"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_small_margin">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:paddingRight="@dimen/activity_small_margin"/>
                <TextView
                    android:id="@+id/userSexe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userSexe"
                    android:textColor="@android:color/black"
                    android:visibility="gone"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/activity_small_margin">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_dialog_email"
                    android:paddingRight="@dimen/activity_small_margin"/>
                <TextView
                    android:id="@+id/userEmailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/userNameTitle"
                    android:text="@string/useremail"
                    android:textColor="@android:color/black"
                    android:textSize="13sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/activity_small_margin">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@android:drawable/btn_radio"
                    android:paddingRight="@dimen/activity_small_margin"/>
                <TextView
                    android:id="@+id/userSignUpDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/userEmailTitle"
                    android:text="@string/userSignUpDate"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/userCountryLayout"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_small_margin">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_small_margin"/>
                <TextView
                    android:id="@+id/userCountryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/userSignUpDate"
                    android:text="@string/userCountry"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    android:visibility="gone" />
            </LinearLayout>


            <EditText
                android:id="@+id/updateSexeEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_general_margin"
                android:hint="@string/sexe_edit_hint"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>


